# linux_cmd

./: CMakeLists.txt  README.md
cd/: CMakeCache.txt  CMakeLists.txt  Makefile  README.MD  cd  cd.c  cmake_install.cmake
cd/cd/: Makefile  cmake_install.cmake
cd/cp/: Makefile  cmake_install.cmake
cd/ls/: Makefile  cmake_install.cmake
cd/mv/: Makefile  cmake_install.cmake
cd/rm/: Makefile  cmake_install.cmake
cp/: CMakeLists.txt  README.MD  cp  cp.c
file_manager/: CMakeLists.txt  file_manager.c
grep/: CMakeLists.txt  grep  grep.c
ls/: CMakeLists.txt  ls.c
mv/: CMakeLists.txt  README.MD  mv  mv.c
rm/: CMakeLists.txt  README.MD  rm  rm.c
